// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms | CardWithTabs Controlled behaviour 1`] = `
Array [
  @media (min-width:760px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>,
  .c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
}

.c14 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c11 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c13 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c15 {
  height: 100%;
}

.c7 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0 c1"
  >
    <header
      className="c2"
    >
      <h2
        className="c3"
      >
        Title for the card
      </h2>
    </header>
    <div
      className="c4"
    >
      <ul
        className="c5 c6 c7"
        direction="row"
        role="tablist"
      >
        <li
          className="c8"
          role="presentation"
        >
          <span
            className="c9"
          >
            <button
              aria-selected={true}
              className="NormalizedButton__Button-ey7f5x-0 c10"
              id="tabs-tab-0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={0}
              type="button"
            >
              <span
                className="c11"
                height={8}
              >
                Tab title 1
              </span>
            </button>
          </span>
        </li>
        <li
          className="c8"
          role="presentation"
        >
          <span
            className="c12"
          >
            <button
              aria-selected={false}
              className="NormalizedButton__Button-ey7f5x-0 c10"
              id="tabs-tab-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
              type="button"
            >
              <span
                className="c13"
                height={8}
              >
                Tab title 2
              </span>
            </button>
          </span>
        </li>
      </ul>
      <div
        className="c14"
      />
      <section
        aria-labelledby="tabs-tab-0"
        className="c15"
        hidden={false}
        id="tabs-tabpanel-0"
        role="tabpanel"
      >
        Tab content 1
      </section>
    </div>
  </div>,
]
`;

exports[`Storyshots Organisms | CardWithTabs Integration: with FadedScroll 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c20 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c18 {
  position: relative;
  overflow-x: hidden;
}

.c21 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c19 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
}

.c14 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c11 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c13 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c15 {
  height: 100%;
}

.c7 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 8px;
  }
}

@media (min-width:976px) {
  .c16 {
    position: relative;
  }

  .c16::before {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    top: 0;
    background: linear-gradient(0deg,#ffffff00 0%,#ffffffff 100%);
  }
}

@media (min-width:976px) {
  .c16 {
    position: relative;
  }

  .c16::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    bottom: 0;
    background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
  }
}

@media (min-width:976px) {
  .c17 {
    max-height: 80px;
    overflow-y: auto;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <h2
      className="c3"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c4"
  >
    <ul
      className="c5 c6 c7"
      direction="row"
      role="tablist"
    >
      <li
        className="c8"
        role="presentation"
      >
        <span
          className="c9"
        >
          <button
            aria-selected={true}
            className="NormalizedButton__Button-ey7f5x-0 c10"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c11"
              height={8}
            >
              Tab title 1
            </span>
          </button>
        </span>
      </li>
      <li
        className="c8"
        role="presentation"
      >
        <span
          className="c12"
        >
          <button
            aria-selected={false}
            className="NormalizedButton__Button-ey7f5x-0 c10"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c13"
              height={8}
            >
              Tab title 2
            </span>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c14"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c15"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      <div
        className="c16"
      >
        <div
          className="c17"
        >
          <div
            className="c18"
          >
            <div
              className="c19"
            />
            <div
              className="c20"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
            </div>
            <div
              className="c21"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs Integration: with FadedScroll of content and height being whatever is available left of parents height. 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c5 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c21 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c18 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c19 {
  position: relative;
  overflow-x: hidden;
}

.c22 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c20 {
  height: 16px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c7 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c14 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c16 {
  height: 100%;
}

.c8 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c5 {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 8px;
  }
}

@media (min-width:976px) {
  .c17 {
    position: relative;
  }

  .c17::before {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    top: 0;
    background: linear-gradient(0deg,#ffffff00 0%,#ffffffff 100%);
  }
}

@media (min-width:976px) {
  .c17 {
    position: relative;
  }

  .c17::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    bottom: 0;
    background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
  }
}

@media (min-width:976px) {
  .c18 {
    min-height: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    -webkit-flex-basis: auto;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
    overflow-y: auto;
  }
}

@media (min-width:760px) {
  .c4 {
    font-size: 20px;
    line-height: 1.2;
  }
}

@media (min-width:976px) {
  .c2 {
    height: 200px;
  }
}

<div
  className="c0 c1 c2"
>
  <header
    className="c3"
  >
    <h2
      className="c4"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c5"
  >
    <ul
      className="c6 c7 c8"
      direction="row"
      role="tablist"
    >
      <li
        className="c9"
        role="presentation"
      >
        <span
          className="c10"
        >
          <button
            aria-selected={true}
            className="NormalizedButton__Button-ey7f5x-0 c11"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c12"
              height={8}
            >
              Tab title 1
            </span>
          </button>
        </span>
      </li>
      <li
        className="c9"
        role="presentation"
      >
        <span
          className="c13"
        >
          <button
            aria-selected={false}
            className="NormalizedButton__Button-ey7f5x-0 c11"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c14"
              height={8}
            >
              Tab title 2
            </span>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c15"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c16"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      <div
        className="c17"
      >
        <div
          className="c18"
        >
          <div
            className="c19"
          >
            <div
              className="c20"
            />
            <div
              className="c21"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
            </div>
            <div
              className="c22"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs Integration: with Typography and extra space inside 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c16 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 20px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
}

.c14 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c11 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c13 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c15 {
  height: 100%;
}

.c7 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <h2
      className="c3"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c4"
  >
    <ul
      className="c5 c6 c7"
      direction="row"
      role="tablist"
    >
      <li
        className="c8"
        role="presentation"
      >
        <span
          className="c9"
        >
          <button
            aria-selected={true}
            className="NormalizedButton__Button-ey7f5x-0 c10"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c11"
              height={8}
            >
              Tab title 1
            </span>
          </button>
        </span>
      </li>
      <li
        className="c8"
        role="presentation"
      >
        <span
          className="c12"
        >
          <button
            aria-selected={false}
            className="NormalizedButton__Button-ey7f5x-0 c10"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c13"
              height={8}
            >
              <span
                style={
                  Object {
                    "color": "red",
                  }
                }
              >
                Custom title component
              </span>
            </span>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c14"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c15"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      <div
        className="c16"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs with initialActiveTabIndex 1`] = `
.c2 {
  padding-left: 12px;
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c4 {
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
}

.c14 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c11 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c15 {
  height: 100%;
}

.c7 {
  padding: 0 20px;
}

@media (min-width:760px) {
  .c2 {
    padding-left: 20px;
    padding-top: 16px;
    padding-right: 20px;
  }
}

@media (min-width:760px) {
  .c4 {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2"
  >
    <h2
      className="c3"
    >
      Title for the card
    </h2>
  </header>
  <div
    className="c4"
  >
    <ul
      className="c5 c6 c7"
      direction="row"
      role="tablist"
    >
      <li
        className="c8"
        role="presentation"
      >
        <span
          className="c9"
        >
          <button
            aria-selected={false}
            className="NormalizedButton__Button-ey7f5x-0 c10"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c11"
              height={8}
            >
              Tab title 1
            </span>
          </button>
        </span>
      </li>
      <li
        className="c8"
        role="presentation"
      >
        <span
          className="c12"
        >
          <button
            aria-selected={true}
            className="NormalizedButton__Button-ey7f5x-0 c10"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c13"
              height={8}
            >
              Tab title 2
            </span>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c14"
    />
    <section
      aria-labelledby="tabs-tab-1"
      className="c15"
      hidden={false}
      id="tabs-tabpanel-1"
      role="tabpanel"
    >
      2
    </section>
  </div>
</div>
`;
